--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,21 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
     */
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    /*
+    spring-boot-starter-data-jpa
+    - 스프링 부트용 Spring Data Jpa 추상화 라이브러리 입니다.
+    - 스프링 부트 버전에 맞춰 자동으로 JPA관련 라이브러리들의 버전을 관리해 줍니다.
+    * */
     implementation('org.springframework.boot:spring-boot-starter-mustache')
     implementation('com.h2database:h2')
+    /*
+    h2
+    - 인메모리 관계형 데이터베이스 입니다.
+    - 별도의 설치가 필요 없이 프로젝트 의존성만으로 관리할 수 있습니다.
+    - 메모리에서 실행되기 때문에 애플리케이션을 재시작할 때마다 초기화된다는 점을 이용하여 테스트 용도로 많이 사용됩니다.
+    - 이 책에서는 JPA의 테스트, 로컬 환경에서의 구동에서 사용할 예정입니다.
+
+    * */
 
     //implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
     implementation('org.springframework.session:spring-session-jdbc')
